[gd_scene load_steps=4 format=2]

[ext_resource path="res://assests/sprites/stars_far.png" type="Texture" id=1]
[ext_resource path="res://assests/sprites/stars_close.png" type="Texture" id=2]
[ext_resource path="res://source/scripts/Stars.gd" type="Script" id=3]

[node name="Stars" type="Node2D"]
script = ExtResource( 3 )
speed_close_start = 100
speed_far_start = 40

[node name="star_close" type="Sprite" parent="."]
position = Vector2( 0, -180 )
texture = ExtResource( 2 )
centered = false

[node name="star_close2" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="star_close3" type="Sprite" parent="."]
position = Vector2( 0, 180 )
texture = ExtResource( 2 )
centered = false

[node name="star_far" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="star_far2" type="Sprite" parent="."]
position = Vector2( 0, 180 )
texture = ExtResource( 1 )
centered = false

[node name="star_far3" type="Sprite" parent="."]
position = Vector2( 0, -180 )
texture = ExtResource( 1 )
centered = false
